codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  上 传 日 志 ？

  将 发 送 以 下 文 件 ：
    • codex-logs.log

› 1. 是   与 团 队 共 享 当 前  Codex 会 话 日 志 以 便 排 查 问 题 。
  2. 否   不 上 传 日 志 。

  按  enter 确 认 ， 或 按  esc 返 回
