codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择  gpt-5.1-codex-max 的 推 理 强 度

  1. 低           Fast responses with lighter reasoning
  2. 中 （ 默 认 ）   Balances speed and reasoning depth for everyday tasks
› 3. 高 （ 当 前 ）   Greater reasoning depth for complex problems
  4. 超 高         Extra high reasoning depth for complex problems

  按  enter 确 认 ， 或 按  esc 返 回
