codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 交 流 风 格
  为  Codex 选 择 一 种 交 流 风 格 。 可 在  /experimental 中 禁 用 。

› 1. 友 好 （ 当 前 ）   温 和 、 协 作 、 乐 于 助 人 。
  2. 务 实           简 洁 、 任 务 导 向 、 直 截 了 当 。

  按  enter 确 认 ， 或 按  esc 返 回
